@@ -129,6 +129,7 @@
      <li><a href="html/page_CommonIntAlgo.html">CommonIntAlgo</a></li>
      <li><a href="html/page_GCDConst.html">GCDConst</a></li>
      <li><a href="html/page_SortUnique.html">SortUnique</a></li>
+     <li><a href="html/page_Partition.html">Partition</a></li>
     </ol>
    </li>
    <li><a href="html/page_PlanInit.html">PlanInit</a></li>
